# bridge-remix

./: .gitignore  .gitmodules  README.md  artifacts_readme.txt  bridge.conf  build_bridge.ps1  build_bridge_all.bat  build_common.ps1  gametargets-example.conf  meson.build  meson_options.txt  version.h.in
.github/workflows/: build.yml
ext/remix/: remix_c.h
src/: meson.build
src/api/remix_api/: bridge_c.h  remix_c.h
src/client/: base.h  client_options.h  d3d9_base_texture.h  d3d9_bootstrap.cpp  d3d9_commonshader.h  d3d9_cubetexture.cpp  d3d9_device.cpp  d3d9_device.h  d3d9_device_base.cpp  d3d9_device_base.h  d3d9_indexbuffer.cpp  d3d9_lss.cpp  d3d9_lss.def  d3d9_lss.h  d3d9_module.cpp  d3d9_pixelshader.cpp  d3d9_query.cpp  d3d9_resource.h  d3d9_stateblock.cpp  d3d9_surface.cpp  d3d9_surface.h  d3d9_surfacebuffer_helper.h  d3d9_swapchain.cpp  d3d9_swapchain.h  d3d9_texture.cpp  d3d9_util.h  d3d9_vertexbuffer.cpp  d3d9_vertexdeclaration.cpp  d3d9_vertexshader.cpp  d3d9_volume.cpp  d3d9_volumetexture.cpp  di_hook.cpp  di_hook.h  lockable_buffer.h  meson.build  remix_api.cpp  remix_api.h  remix_state.cpp  remix_state.h  shadow_map.h  (+2 more)
src/launcher/: meson.build
src/server/: main.cpp  meson.build  module_processing.cpp  module_processing.h  remix_api.h
src/util/: meson.build  util_atomiccircularqueue.h  util_blockingcircularqueue.h  util_bridge_state.h  util_bridgecommand.cpp  util_bridgecommand.h  util_circularbuffer.h  util_circularqueue.h  util_clientcommand.h  util_commands.h  util_common.h  util_filesys.h  util_guid.h  util_ipcchannel.h  util_messagechannel.h  util_process.h  util_remixapi.cpp  util_remixapi.h  util_servercommand.h  util_sharedheap.cpp  util_texture_and_volume.h
src/util/config/: config.cpp  global_options.cpp  global_options.h
src/util/log/: log.cpp  log.h  log_strings.h
test/: meson.build
vsgen/: bridge-remix.vcxproj.template  bridge_project.py  generate_vs_project_files.py  sln.py  testcase_project.py  testcase_project.vcxproj.template  vsutil.py
